--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       dockerfile: Dockerfile
     container_name: client
     ports:
-      - "3000:3000"
-    volumes:
-      - ./multcostura-front:/usr/src/app
-      - /usr/src/app/node_modules
+      - "3000:80"
+  nginx:
+    build: ./nginx
+    ports:
+      - 80:80
